# Optimized-mod

./: CMakeLists.txt
.github/: Gij
include/: ConnectionManager.hpp  IVersionTranslator.hpp  TranslationPipeline.hpp
include/translators/: Translator_v766_to_v776.hpp  Translator_v776_to_v786.hpp  Translator_v786_to_v800.hpp  Translator_v800_to_v818.hpp  Translator_v818_to_v827.hpp  Translator_v827_to_v844.hpp  Translator_v844_to_v859.hpp  Translator_v859_to_v898.hpp  Translator_v898_to_v924.hpp  Translator_v924_to_v944.hpp
src/: PacketHooks.cpp  TranslationPipeline.cpp  main.cpp
src/translators/: Translator_v766_to_v776.cpp  Translator_v776_to_v786.cpp  Translator_v786_to_v800.cpp  Translator_v800_to_v818.cpp  Translator_v818_to_v827.cpp  Translator_v827_to_v844.cpp  Translator_v844_to_v859.cpp  Translator_v859_to_v898.cpp  Translator_v898_to_v924.cpp  Translator_v924_to_v944.cpp
